--- a/less/blocks/featured.less
+++ b/less/blocks/featured.less
@@ -2,16 +2,24 @@
   padding: 30px;
 }
 
+.featured__title {
+  margin-top: 0;
+  margin-bottom: 5px;
+}
+
 .featured__weekly {
+  .text(17px; 16px; @color-legend; bold);
   text-transform: uppercase;
-  color: @color-legend;
 }
 
 .featured__info {
-  color: @color-text;
+  .text(15px; 24px; @color-text);
+  font-size: 15px;
+  line-height: 24px;
+  margin: 30px 0;
 }
 
 .featured__description {
-  color: @color-text;
+  .text(15px; 20px; @color-text);
 }
 
