--- a/less/global/h.less
+++ b/less/global/h.less
@@ -1,14 +1,11 @@
 h1 {
-  font-size: 27px;
-  line-height: 30px;
+  .text(27px; 30px; @color-title; bold);
 }
 
 h2 {
-  font-size: 25px;
-  line-height: 30px;
+  .text(25px; 30px; @color-title; bold);
 }
 
 h3 {
-  font-size: 19px;
-  line-height: 24px;
+  .text(19px; 24px; @color-title; bold);
 }
