--- a/less/style.less
+++ b/less/style.less
@@ -1,12 +1,11 @@
 
-@import "normalize.less";
+@import "global/normalize.less";
 
-@import "variables.less";
-@import "mixins.less";
+@import "global/variables.less";
+@import "global/mixins.less";
 
-@import "global/body.less";
 @import "global/fonts.less";
-@import "global/h.less";
+@import "global/global.less";
 
 @import "blocks/btn.less";
 @import "blocks/catalog.less";
