--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -1,17 +1,7 @@
-.main-nav__list {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
-.main-nav__item {
-  display: block;
-}
 
 .main-nav__link {
   .text(17px; 24px; @color-title; bold);
   display: block;
-  padding: 30px 76px;
-  text-decoration: none;
+  padding: 30px 60px 30px 76px;
   border-top: 1px solid #d2d2d2;
 }
