--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -1,3 +1,15 @@
 .page-footer {
   background: @color-footer;
 }
+
+.page-footer__copyright {
+  padding-right: 30px;
+  padding-left: 30px;
+  text-align: center;
+}
+
+.page-footer__copyright-link {
+  display: inline-block;
+  padding: 28px 95px 30px 38px;
+  .text(18px; 19px; @color-title; bold);
+}
