--- a/less/blocks/seo.less
+++ b/less/blocks/seo.less
@@ -2,7 +2,12 @@
   padding: 30px;
 }
 
+.seo__title {
+  margin-top: 15px;
+  margin-bottom: 0;
+}
+
 .seo__item {
-  padding-top: 58px;
-  padding-bottom: 28px;
+  padding-top: 86px;
+  .text(17px; auto; @color-title; bold);
 }
