--- a/less/global/global.less
+++ b/less/global/global.less
@@ -5,15 +5,22 @@ body {
 }
 
 h1 {
+  font-family: 'OpenSans';
   .text(27px; 30px; @color-title; bold);
 }
 
 h2 {
+  font-family: 'OpenSans';
   .text(25px; 30px; @color-title; bold);
 }
 
 h3 {
-  .text(19px; 24px; @color-title; bold);
+  font-family: 'OpenSans';
+  .text(19px; 24px; @color-body; bold);
+}
+
+p {
+  font-family: 'OpenSans';
 }
 
 ul {
