--- a/less/blocks/category.less
+++ b/less/blocks/category.less
@@ -12,7 +12,6 @@
 }
 
 .category__item {
-  padding: 10px 160px 10px 30px;
   &--interior {
     background: @color-legend;
   }
@@ -22,5 +21,6 @@
 }
 
 .category__link {
-  color: #ffffff;
+  display: block;
+  padding: 10px 160px 10px 30px;
 }
