--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -9,7 +9,8 @@
 }
 
 .page-footer__copyright-link {
+  .text(18px; 19px; @color-title; bold);
   display: inline-block;
   padding: 28px 95px 30px 38px;
-  .text(18px; 19px; @color-title; bold);
+  border-top: 1px solid #e5e5e5;
 }
