--- a/less/blocks/btn.less
+++ b/less/blocks/btn.less
@@ -1,10 +1,10 @@
 .btn {
+  .text(17px; 16px; @color-text; bold);
   display: block;
-  padding: 17px;
+  padding: 15px;
   text-align: center;
   text-decoration: none;
   font-weight: bold;
   text-transform: uppercase;
-  color: @color-text;
   border: 2px solid @color-text;
 }
