--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -1,18 +1,22 @@
-.contacts {
-  padding-top: 30px;
-  padding-bottom: 30px;
+.contacts__wrapper {
+  .container();
+  padding: 30px 30px 0 30px;
 }
 
 .contacts__title {
-  margin: 30px 30px 38px 30px;
+  margin: 30px 0 38px 0;
 }
 
 .contacts__info {
   .text(15px; 30px; @color-text);
   & td {
-    padding-left: 30px;
+    padding-right: 30px;
     padding-bottom: 35px;
     vertical-align: top;
+  }
+
+  .contacts__address {
+    padding-right: 55px;
   }
 }
 
@@ -20,17 +24,14 @@
   color: @color-text;
 }
 
-.contacts__address {
-  padding-right: 75px;
-}
 
 .contacts__map {
   width: 100%;
-  margin-bottom: 38px;
+  margin-bottom: 8px;
   text-align: center;
 }
 
 .contacts__btn-wrapper {
-  padding-left: 30px;
-  padding-right: 30px;
+  .container();
+  padding: 30px;
 }
