--- a/less/blocks/modal.less
+++ b/less/blocks/modal.less
@@ -1,4 +1,9 @@
 .modal {
+
+}
+
+.modal__wrapper {
+  .container();
   padding: 30px;
   text-align: center;
 }
@@ -25,7 +30,7 @@
 .modal__radio-label {
   .text(17px; 16px; @color-text; bold);
   display: inline-block;
-  width: 18%;
+  width: 32%;
   padding: 15px;
   border: 2px solid #ececec;
 }
