--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -2,6 +2,10 @@
   background: @color-footer;
 }
 
+.page-footer__wrapper {
+  .container();
+}
+
 .page-footer__copyright {
   padding-right: 30px;
   padding-left: 30px;
