--- a/less/blocks/seo.less
+++ b/less/blocks/seo.less
@@ -1,4 +1,5 @@
 .seo {
+  .container();
   padding: 30px;
 }
 
@@ -10,4 +11,26 @@
 .seo__item {
   .text(17px; auto; @color-title; bold);
   padding-top: 86px;
+}
+
+@media @tablet-widths {
+
+  .seo {
+    padding: 30px 0 60px 0;
+  }
+
+  .seo__list {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  .seo__items {
+    width: 50%;
+  }
+
+  .seo__item {
+    .text(20px; auto; @color-title; bold);
+    padding-right: 35px;
+  }
 }
