--- a/less/global/variables.less
+++ b/less/global/variables.less
@@ -1,3 +1,6 @@
+@tablet-widths: ~"(min-width: 768px)";
+@desktop-widths: ~"(min-width: 1150px)";
+
 @color-body: #ffffff;
 @color-footer: #f1f1f1;
 @color-legend: #63d1bb;
