--- a/less/blocks/seo.less
+++ b/less/blocks/seo.less
@@ -34,3 +34,15 @@
     padding-right: 35px;
   }
 }
+
+@media @desktop-widths {
+
+  .seo__wrapper {
+    margin-left: 175px;
+    margin-right: 175px;
+  }
+
+  .seo__item {
+    padding-right: 50px;
+  }
+}
