--- a/less/global/global.less
+++ b/less/global/global.less
@@ -6,10 +6,10 @@ body {
   width: 100%;
   background: @color-body;
   color: @color-title;
+  font-family: "OpenSans", "Arial", sans-serif;
 }
 
 h1 {
-  font-family: 'OpenSans';
   .text(27px; 30px; @color-title; bold);
 
   @media @tablet-widths {
@@ -22,7 +22,6 @@ h1 {
 }
 
 h2 {
-  font-family: 'OpenSans';
   .text(25px; 30px; @color-title; bold);
 
   @media @tablet-widths {
@@ -35,7 +34,6 @@ h2 {
 }
 
 h3 {
-  font-family: 'OpenSans';
   .text(19px; 24px; @color-body; bold);
 
   @media @tablet-widths {
@@ -45,10 +43,6 @@ h3 {
   @media @desktop-widths {
     .text(20px; 30px; @color-body; bold);
   }
-}
-
-p {
-  font-family: 'OpenSans';
 }
 
 ul {
