--- a/less/blocks/modal.less
+++ b/less/blocks/modal.less
@@ -1,11 +1,10 @@
-.modal {
-
-}
-
 .modal__wrapper {
-  .container();
+  width: 320px;
+  margin: 0 auto;
   padding: 30px;
   text-align: center;
+  border: 1px solid #c6c6c6;
+  box-shadow: 0 3px 10px #c6c6c6;
 }
 
 .modal__title {
@@ -19,8 +18,13 @@
 
 .modal__size {
   padding: 25px 0 30px 0;
-  margin: none;
+  margin: 0;
   border: none;
+}
+
+.modal__field-size {
+  display: flex;
+  justify-content: space-between;
 }
 
 .modal__radio {
@@ -29,9 +33,8 @@
 
 .modal__radio-label {
   .text(17px; 16px; @color-text; bold);
-  display: inline-block;
   width: 32%;
-  padding: 15px;
+  padding: 16px;
   border: 2px solid #ececec;
 }
 
@@ -41,8 +44,25 @@
 
 .modal__submit {
   .text(17px; 16px; @color-body; bold);
-  padding: 15px;
+  padding: 18px;
   width: 100%;
+  text-transform: uppercase;
   background-color: @color-legend;
   border: none;
+}
+
+@media @tablet-widths {
+
+  .modal__wrapper {
+    width: 567px;
+    padding: 47px 108px;
+  }
+
+  .modal__title {
+    .text(30px; 57px; @color-title; bold);
+  }
+
+  .modal__choose-size {
+    .text(17px; 30px; @color-text);
+  }
 }
