--- a/less/blocks/social.less
+++ b/less/blocks/social.less
@@ -8,11 +8,18 @@
   display: inline-block;
   width: 30px;
   height: 30px;
-  margin-right: 10px;
+  margin-right: 22px;
   outline: 1px dashed gray;
   font-size: 0;
 }
 
 .social__link:last-child {
   margin-right: 0;
+}
+
+@media @tablet-widths {
+
+  .social {
+    width: 30%;
+  }
 }
