--- a/less/blocks/category.less
+++ b/less/blocks/category.less
@@ -28,7 +28,7 @@
 
 .category__link {
   display: block;
-  padding: 10px 170px 10px 0;
+  padding: 10px 160px 10px 0;
 }
 
 @media @tablet-widths {
@@ -44,5 +44,16 @@
   .category__header {
     padding-top: 78px;
     padding-bottom: 342px;
+  }
+}
+
+@media @desktop-widths {
+
+  .category__link {
+    padding-right: 335px;
+  }
+
+  .category__header {
+    padding-bottom: 327px;
   }
 }
