--- a/less/blocks/manufacture.less
+++ b/less/blocks/manufacture.less
@@ -12,13 +12,77 @@
   .text(17px; 24px; @color-title; bold);
 }
 
+.manufacture__video {
+  font-size: 0;
+  line-height: 0;
+}
+
 .manufacture__caption {
   .text(13px; 24px; @color-text);
-  margin-top: -5px;
   padding: 20px 33px 32px 33px;
   border: 1px solid #ececec;
 }
 
 .manufacture__btn {
   margin-top: 24px;
+}
+
+@media @tablet-widths {
+
+  .manufacture {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    margin-bottom: 63px;
+  }
+
+  .manufacture__header {
+    order: 1;
+    padding: 7px 30px 0 108px;
+    border-bottom: none;
+  }
+
+  .manufacture__title {
+    font-size: 20px;
+  }
+
+  .manufacture__caption {
+    .text(15px; 30px; @color-text);
+    order: 2;
+    padding: 0 30px 45px 30px;
+    border-top: none;
+  }
+
+  .manufacture__btn {
+    margin-top: 35px;
+  }
+}
+
+@media @desktop-widths {
+
+  .manufacture {
+    flex-wrap: wrap;
+    justify-content: space-between;
+    height: 455px;
+    margin-bottom: 105px;
+  }
+
+  .manufacture__header {
+    width: 35%;
+    padding: 84px 130px 0 79px;
+  }
+
+  .manufacture__title {
+    margin-bottom: 12px;
+  }
+
+  .manufacture__video {
+    height: 100%;
+    width: 65%;
+  }
+
+  .manufacture__caption {
+    width: 35%;
+    padding: 0 56px 59px 79px;
+  }
 }
