--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -8,6 +8,7 @@
 
 .contacts__title {
   margin: 30px 0 38px 0;
+  font-size: 18px;
 }
 
 .contacts__info {
@@ -54,6 +55,10 @@
     padding: 0;
     margin-bottom: 57px;
   }
+  
+  .contacts__title {
+    font-size: 43px;
+  }
 
   .contacts__info {
     .text(17px; 30px; @color-text);
@@ -99,6 +104,7 @@
 
   .contacts__title {
     margin-top: 70px;
+    font-size: 53px;
   }
 
   .contacts__info {
