--- a/less/blocks/order.less
+++ b/less/blocks/order.less
@@ -6,7 +6,8 @@
 }
 
 .order__wrapper {
-  .container();
+  width: 320px;
+  margin: 0 auto;
   padding: 15px 30px 55px 30px;
 }
 
@@ -22,11 +23,15 @@
   }
 
   .order__wrapper {
+    width: 100%;
+    margin: 0;
     padding: 0;
   }
 
   .order__subtitle {
     .text(17px; 30px; @color-text);
+    width: 668px;
+    margin: 0 auto;
   }
 }
 
