--- a/less/blocks/featured.less
+++ b/less/blocks/featured.less
@@ -15,7 +15,8 @@
 
 .featured__info {
   .text(15px; 24px; @color-text);
-  margin: 30px 0;
+  padding: 24px 0 16px 0;
+  margin: 0;
 }
 
 .featured__description {
@@ -24,17 +25,21 @@
   border-collapse: collapse;
 
   & td {
-    padding-right: 30px;
     padding-top: 10px;
     padding-bottom: 10px;
     border-bottom: 1px solid #ececec;
   }
 }
 
+.featured__col {
+  width: 97px;
+}
+
 .featured__price {
   .text(17px; 24px; @color-text; bold);
   display: block;
-  padding: 28px;
+  padding-top: 22px;
+  padding-bottom: 26px;
   text-align: center;
 }
 
