--- a/less/blocks/reviews.less
+++ b/less/blocks/reviews.less
@@ -9,12 +9,12 @@
 
 .reviews__title {
   margin-top: 0;
-  margin-bottom: 37px;
+  margin-bottom: 25px;
 }
 
 .reviews__item {
   .text(15px; 30px; @color-text);
-  margin: 0 0 35px 0;
+  margin: 0 0 26px 0;
 }
 
 .reviews__author-name {
@@ -24,12 +24,14 @@
 
 .reviews__author-nickname {
   .text(18px; 30px; @color-text);
+  display: block;
   font-style: normal;
+  padding-top: 3px;
 }
 
 .reviews__sliders-btn {
   display: flex;
-  margin: 38px 0;
+  margin: 33px 0;
 }
 .reviews__slider-btn {
   padding: 26px;
