--- a/less/blocks/category.less
+++ b/less/blocks/category.less
@@ -4,8 +4,8 @@
 
 .category__header {
   .container();
-  padding: 75px 30px 120px 30px;
-  background: url("../../img/hero-mobile@1x.jpg") no-repeat 50% 0;
+  padding: 52px 30px 104px 30px;
+  background: url("../../img/hero-mobile@1x.jpg") no-repeat 50% 20%;
 }
 
 .category__wrapper {
@@ -28,7 +28,7 @@
 
 .category__link {
   display: block;
-  padding: 10px 160px 10px 0;
+  padding: 8px 160px 8px 0;
 }
 
 @media @tablet-widths {
