--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -7,7 +7,7 @@
 }
 
 .contacts__title {
-  margin: 30px 0 38px 0;
+  margin: 28px 0 25px 0;
   font-size: 18px;
 }
 
@@ -15,6 +15,7 @@
   .text(15px; 30px; @color-text);
   display: flex;
   flex-direction: column;
+  margin-bottom: 10px;
 }
 
 .contacts__row {
@@ -22,7 +23,7 @@
 }
 
 .contacts__cell {
-  padding-bottom: 35px;
+  padding-bottom: 28px;
   vertical-align: top;
 }
 
