--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -3,11 +3,41 @@
 }
 
 .page-header__logo {
-  margin: 21px;
+  width: 320px;
+  margin: 0 auto;
+  padding: 20px;
   text-align: center;
+  border-bottom: 1px solid #d2d2d2;
 }
 
 .page-header__toggle {
   position: absolute;
   font-size: 0;
+}
+
+.page-header__free-block {
+  display: none;
+}
+
+@media @tablet-widths {
+  
+  .page-header__logo {
+    display: none;
+  }
+  
+  .page-header__free-block {
+    position: absolute;
+    top: 114px;
+    left: 64%;
+    display: block;
+    text-align: right;
+    font-size: 15px;
+  }
+}
+
+@media @desktop-widths {
+  
+  .page-header__free-block {
+    left: 75%;
+  }
 }
