--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -1,5 +1,6 @@
 .page-header {
   position: relative;
+  border-bottom: 1px solid #ececec;
 }
 
 .page-header__logo {
@@ -7,7 +8,6 @@
   margin: 0 auto;
   padding: 20px;
   text-align: center;
-  border-bottom: 1px solid #d2d2d2;
 }
 
 .page-header__toggle {
@@ -15,29 +15,25 @@
   font-size: 0;
 }
 
-.page-header__free-block {
-  display: none;
-}
-
 @media @tablet-widths {
-  
+
+  .page-header {
+    border-bottom: none;
+  }
+
+  .page-header::before {
+    content: "";
+    position: absolute;
+    top: 88px;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 80%;
+    background-color: @color-footer;
+    border-top: 1px solid #ececec;
+  }
+
   .page-header__logo {
     display: none;
-  }
-  
-  .page-header__free-block {
-    position: absolute;
-    top: 114px;
-    left: 64%;
-    display: block;
-    text-align: right;
-    font-size: 15px;
-  }
-}
-
-@media @desktop-widths {
-  
-  .page-header__free-block {
-    left: 75%;
   }
 }
