--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -103,7 +103,6 @@
     display: block;
     flex-grow: 1;
     text-align: right;
-    background-color: @color-footer;
   }
   
   .main-nav__free {
@@ -113,6 +112,10 @@
   }
   
   .main-nav__item--tablet-color {
+    background-color: @color-footer;
+  }
+  
+  .main-nav__item--color {
     background-color: @color-footer;
   }
 }
@@ -127,7 +130,6 @@
     order: 6;
     display: block;
     width: 235px;
-    background-color: @color-footer;
   }
 
   .main-nav__link-new {
@@ -178,5 +180,9 @@
 
   .main-nav__item--tablet-color {
     background-color: @color-body;
+  }
+  
+  .main-nav__item--desktop-color {
+    background-color: @color-footer;
   }
 }
