--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -21,8 +21,7 @@
     border-bottom: none;
   }
 
-  .page-header::before {
-    content: "";
+  .back-color {
     position: absolute;
     top: 88px;
     left: 0;
