--- a/less/blocks/featured.less
+++ b/less/blocks/featured.less
@@ -1,4 +1,8 @@
 .featured {
+	width: 100%;
+}
+
+.featured__wrapper {
   .container();
   padding: 30px;
 }
@@ -45,12 +49,9 @@
 
 @media @tablet-widths {
 
-  .featured {
-    padding: 60px 0;
-  }
-
   .featured__wrapper {
     position: relative;
+    padding: 60px 0;
   }
 
   .featured__titles {
