--- a/less/blocks/reviews.less
+++ b/less/blocks/reviews.less
@@ -1,8 +1,9 @@
 .reviews {
-  .container();
+  width: 100%;
 }
 
 .reviews__wrapper {
+  .container();
   position: relative;
   padding: 30px;
 }
@@ -94,6 +95,7 @@
 }
 
 @media @desktop-widths {
+  
   .reviews__wrapper {
     padding-left: 175px;
   }
