--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -1,8 +1,9 @@
 .contacts {
-  .container();
+  width: 100%;
 }
 
 .contacts__wrapper {
+  .container();
   padding: 30px 30px 0 30px;
 }
 
@@ -87,20 +88,18 @@
 }
 
 @media @desktop-widths {
+  
   .contacts {
+    position: relative;
+  }
+  
+  .contacts__wrapper {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     justify-content: space-between;
-    height: 461px;
     margin-top: 80px;
     margin-bottom: 105px;
-  }
-
-  .contacts__wrapper {
-    width: 50%;
     padding-left: 175px;
-    margin-bottom: 0;
   }
 
   .contacts__title {
@@ -117,15 +116,15 @@
   }
 
   .contacts__map {
+    position: absolute;
+    top: 0;
+    left: 50%;
     width: 50%;
-    order: 1;
     text-align: left;
   }
 
   .contacts__btn-wrapper {
     display: block;
-    width: 50%;
     padding: 0 0 0 175px;
-    margin-right: 0;
   }
 }
