--- a/less/blocks/seo.less
+++ b/less/blocks/seo.less
@@ -1,4 +1,8 @@
 .seo {
+	width: 100%;
+}
+
+.seo__wrapper {
   .container();
   padding: 30px;
 }
@@ -15,7 +19,7 @@
 
 @media @tablet-widths {
 
-  .seo {
+  .seo__wrapper{
     padding: 30px 0 60px 0;
   }
 
