--- a/less/blocks/manufacture.less
+++ b/less/blocks/manufacture.less
@@ -9,7 +9,7 @@
 
 .manufacture__header {
   padding: 14px 30px 12px 90px;
-  border: 1px solid #ececec;
+  border: 1px solid @color-border;
 }
 
 .manufacture__title {
@@ -24,7 +24,7 @@
 .manufacture__caption {
   .text(13px; 24px; @color-text);
   padding: 20px 33px 32px 33px;
-  border: 1px solid #ececec;
+  border: 1px solid @color-border;
 }
 
 .manufacture__btn {
