--- a/less/blocks/modal.less
+++ b/less/blocks/modal.less
@@ -42,7 +42,7 @@
   .text(17px; 16px; @color-text; bold);
   width: 32%;
   padding: 16px;
-  border: 2px solid #ececec;
+  border: 2px solid @color-border;
 }
 
 .modal__radio:checked + .modal__radio-label {
