--- a/less/blocks/catalog-item.less
+++ b/less/blocks/catalog-item.less
@@ -24,7 +24,7 @@
   position: relative;
   padding-top: 18px;
   margin-top: 20px;
-  border-top: 1px solid #ececec;
+  border-top: 1px solid @color-border;
 }
 
 .catalog-item__price {
