--- a/less/blocks/featured.less
+++ b/less/blocks/featured.less
@@ -31,7 +31,7 @@
   & td {
     padding-top: 10px;
     padding-bottom: 10px;
-    border-bottom: 1px solid #ececec;
+    border-bottom: 1px solid @color-border;
   }
 }
 
