--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -12,7 +12,7 @@
   .text(17px; 24px; @color-title; bold);
   display: block;
   padding: 27px 60px 27px 76px;
-  border-bottom: 1px solid #ececec;
+  border-bottom: 1px solid @color-border;
 }
 
 .main-nav__logo,
@@ -42,7 +42,7 @@
     display: block;
     width: 40%;
     flex-grow: 1;
-    border-bottom: 1px solid #ececec;
+    border-bottom: 1px solid @color-border;
   }
 
   .main-nav__logo .main-nav__link {
@@ -59,9 +59,9 @@
   .main-nav__item--search {
     order: 4;
     width: 82px;
-    border-right: 1px solid #ececec;
-    border-left: 1px solid #ececec;
-    border-bottom: 1px solid #ececec;
+    border-right: 1px solid @color-border;
+    border-left: 1px solid @color-border;
+    border-bottom: 1px solid @color-border;
   }
 
   .main-nav__item--search .main-nav__link {
@@ -72,7 +72,7 @@
     order: 5;
     width: 315px;
     text-align: right;
-    border-bottom: 1px solid #ececec;
+    border-bottom: 1px solid @color-border;
   }
   
   .main-nav__item--basket .main-nav__link {
@@ -147,8 +147,8 @@
   .main-nav__item--catalog {
     order: 1;
     width: 235px;
-    border-bottom: 1px solid #ececec;
-    border-right: 1px solid #ececec;
+    border-bottom: 1px solid @color-border;
+    border-right: 1px solid @color-border;
   }
 
   .main-nav__item--catalog .main-nav__link {
@@ -160,7 +160,7 @@
   .main-nav__item--form {
     order: 2;
     width: 235px;
-    border-bottom: 1px solid #ececec;
+    border-bottom: 1px solid @color-border;
   }
 
   .main-nav__item--form .main-nav__link {
