--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -1,6 +1,6 @@
 .page-header {
   position: relative;
-  border-bottom: 1px solid #ececec;
+  border-bottom: 1px solid @color-border;
 }
 
 .page-header__logo {
@@ -29,7 +29,7 @@
     width: 100%;
     height: 80%;
     background-color: @color-footer;
-    border-top: 1px solid #ececec;
+    border-top: 1px solid @color-border;
   }
 
   .page-header__logo {
