--- a/less/blocks/featured.less
+++ b/less/blocks/featured.less
@@ -75,7 +75,7 @@
     width: 290px;
   }
 
-  .featured__image {
+  .featured__image-wrapper {
     position: absolute;
     top: 120px;
     left: 50%;
@@ -106,7 +106,7 @@
     margin-left: 175px;
   }
 
-  .featured__image {
+  .featured__image-wrapper {
     top: 0;
     z-index: -1;
   }
