--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -21,6 +21,10 @@
   display: none;
 }
 
+.main-nav__item--search:hover .main-nav__item-icon-search {
+  fill: green;
+}
+
 @media @tablet-widths {
 
   .main-nav {
