--- a/less/global/variables.less
+++ b/less/global/variables.less
@@ -11,3 +11,6 @@
 @color-hover: #8d8d8d;
 @color-active: #cacaca;
 @color-border: #ececec;
+@color-social: #231f20;
+@color-icon: #46c1ae;
+@color-down: #bde3dd;
