--- a/less/blocks/category.less
+++ b/less/blocks/category.less
@@ -5,7 +5,14 @@
 .category__header {
   .container();
   padding: 52px 30px 104px 30px;
-  background: url("../../img/hero-mobile@1x.jpg") no-repeat 50% 20%;
+  background: url("../img/hero-mobile@1x.jpg") no-repeat 50% 20%;
+}
+
+@media (min-resolution: 144dpi),
+  (min-resolution: 1.5dppx) {
+    .category__header {
+      background-image: url("../img/hero-mobile@2x.jpg");
+    }
 }
 
 .category__wrapper {
@@ -44,6 +51,14 @@
   .category__header {
     padding-top: 78px;
     padding-bottom: 342px;
+    background-image: url("../img/hero-desktop@1x.jpg");
+  }
+  
+  @media (min-resolution: 144dpi),
+    (min-resolution: 1.5dppx) {
+      .category__header {
+        background-image: url("../img/hero-desktop@2x.jpg");
+      }
   }
 }
 
