--- a/less/blocks/overlay.less
+++ b/less/blocks/overlay.less
@@ -3,8 +3,12 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 2;
+  z-index: 8;
   width: 100%;
   height: 100%;
   background-color: rgba(255, 255, 255, 0.8);
+}
+
+.overlay--show {
+	display: block;
 }
